@@ -74,6 +74,7 @@ disable_rescan_dxe    |Disables scanning for newly revealed DXE drivers when con
 enable_esp_filter     |Prevents other ESPs other than the RefindPlus ESP being scanned for loaders
 follow_symlinks       |Allows following symbolic links to loaders (Ignored by default)
 force_trim            |Forces `TRIM` on non-Apple SSDs on Macs if required
+handle_ventoy         |Rationalises the binaries displayed for `Ventoy` instances
 hidden_icons_external |Allows scanning for `.VolumeIcon` icons on external volumes
 hidden_icons_ignore   |Disables scanning for `.VolumeIcon` image icons if not required
 hidden_icons_prefer   |Prioritises `.VolumeIcon` image icons when available
